--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,6 +12,23 @@
         {% endblock %}
     </head>
     <body>
-        {% block body %}{% endblock %}
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <h1>Shop</h1>
+                    <ul>
+                        <li><a href="{{ path('app_home') }}">{{ 'navbar_home'|trans }}</a></li>
+                        <li><a href="{{path('app_catalog') }}">{{ 'navbar_catalog'|trans }}</a></li>
+                    </ul>
+                    <div class="d-flex justify-content-end">
+                        <a href="{{ path('app_change_locale', {'locale': 'fr'}) }}">Français</a>
+                        <a href="{{ path('app_change_locale', {'locale': 'en'}) }}">English</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            {% block body %}{% endblock %}
+        </div>
     </body>
 </html>
