--- a/templates/home/catalog.html.twig
+++ b/templates/home/catalog.html.twig
@@ -8,7 +8,7 @@
 
     <ul>
         {% for product in products %}
-            <li>{{ product.title }}</li>
+            <li><a href="{{ path('app_product', { id: product.id }) }}">{{ product.title }}</a></li>
         {% endfor %}
     </ul>
 
