--- a/templates/home/catalog.html.twig
+++ b/templates/home/catalog.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %}
+{% extends 'base-with-header.html.twig' %}
 
 {% block title %}{{ 'catalog_title'|trans }}{% endblock %}
 
