--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,31 +4,15 @@
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
-        {% block stylesheets %}
-        {% endblock %}
 
         {% block javascripts %}
             {% block importmap %}{{ importmap('app') }}{% endblock %}
         {% endblock %}
+        {% block stylesheets %}
+            <link rel="stylesheet" href="{{ asset('styles/app.css') }}">
+        {% endblock %}
     </head>
     <body>
-        <div class="container">
-            <div class="row">
-                <div class="col-12">
-                    <h1>Shop</h1>
-                    <ul>
-                        <li><a href="{{ path('app_home') }}">{{ 'navbar_home'|trans }}</a></li>
-                        <li><a href="{{path('app_catalog') }}">{{ 'navbar_catalog'|trans }}</a></li>
-                    </ul>
-                    <div class="d-flex justify-content-end">
-                        <a href="{{ path('app_change_locale', {'locale': 'fr'}) }}">Français</a>
-                        <a href="{{ path('app_change_locale', {'locale': 'en'}) }}">English</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="container">
             {% block body %}{% endblock %}
-        </div>
     </body>
 </html>
